--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,18 +3,18 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-    <dimen name="textSizeSmall">10sp</dimen>
-    <dimen name="textSizeMedium">15sp</dimen>
-    <dimen name="textSizeLarge">20sp</dimen>
-    <dimen name="textSizeXLarge">30sp</dimen>
+    <dimen name="text_size_small">10sp</dimen>
+    <dimen name="text_size_medium">15sp</dimen>
+    <dimen name="text_size_large">20sp</dimen>
+    <dimen name="text_size_x_large">30sp</dimen>
 
-    <dimen name="paddingSmall">5dp</dimen>
-    <dimen name="paddingMedium">10dp</dimen>
-    <dimen name="paddingLarge">15dp</dimen>
-    <dimen name="paddingXLarge">25dp</dimen>
+    <dimen name="padding_small">10sp</dimen>
+    <dimen name="padding_medium">15sp</dimen>
+    <dimen name="padding_large">20sp</dimen>
+    <dimen name="padding_x_large">30sp</dimen>
 
-    <dimen name="marginSmall">5dp</dimen>
-    <dimen name="marginMedium">10dp</dimen>
-    <dimen name="marginLarge">15dp</dimen>
-    <dimen name="marginXLarge">25dp</dimen>
+    <dimen name="margin_small">10sp</dimen>
+    <dimen name="margin_medium">15sp</dimen>
+    <dimen name="margin_large">20sp</dimen>
+    <dimen name="margin_x_large">30sp</dimen>
 </resources>
